Solved: #3560 Error Message's text isn't aligned properly in Sign Up page

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -260,6 +260,10 @@
   margin-bottom: 10px;
   padding: 15px;
 
+  .signUp-error-message{
+    margin-bottom:0;
+  }
+
   li {
     text-align: left;
   }
